--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
