--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "1",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
+    "@tanstack/react-table": "^8.21.2",
     "bs58": "^6.0.0",
     "cross-fetch": "^4.1.0",
     "dotenv": "^16.4.7",
